--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include LICENSE
 include README.md
 include versioneer.py
 include jinjalint/_version.py
+include requirements.txt
 
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
