--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -4,4 +4,4 @@
   language: python
   language_version: python3
   entry: curlylint
-  files: '\.(html|jinja|twig)$'
+  types_or: [html, jinja, twig]
