Update Node version to 18

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "prepare": "./.githooks/deploy.sh",
     "lint": "prettier --check '**/?(.)*.{md,mdx,css,scss,js,json,json5,yaml,yml}'",
     "format": "prettier --write '**/?(.)*.{md,mdx,css,scss,js,json,json5,yaml,yml}'"
+  },
+  "dependencies": {
+    "18": "*"
   }
 }
